--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,2 +1,11 @@
-FROM ubuntu:16
+FROM centos:7
 
+WORKDIR /root
+
+RUN yum update && yum install -y java-1.8.0-openjdk
+
+ADD target/highloadcup2017-1.0.jar .
+
+EXPOSE 80
+
+CMD java -Dproduction-load=true  -jar highloadcup2017-1.0.jar
